# passwd-manager

./: .gitignore  Cargo.toml  README.md
examples/: block.rs  list.rs
src/: app.rs  crypto.rs  json.rs  lib.rs  main.rs  ui.rs  util.rs
