[package]
name = "passwd-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
serde_json = "1.0"
ansi_term = "0.12"
unicode-width = "*"
base64 = "*"
aes = "0.8"
cbc = "*"
